--- a/kurtosis_package/incredible-squaring-avs/config-files/operator.anvil.yaml
+++ b/kurtosis_package/incredible-squaring-avs/config-files/operator.anvil.yaml
@@ -12,8 +12,8 @@ avs_registry_coordinator_address: 0xa82fF9aFd8f496c3d6ac40E2a0F282E47488CFc9
 operator_state_retriever_address: 0x95401dc811bb5740090279Ba06cfA8fcF6113778
 
 # ETH RPC URL
-eth_rpc_url: http://localhost:8545
-eth_ws_url: ws://localhost:8545
+eth_rpc_url: http://host.docker.internal:8545
+eth_ws_url: ws://host.docker.internal:8545
 
 # If you running this using eigenlayer CLI and the provided AVS packaging structure,
 # this should be /operator_keys/ecdsa_key.json as the host path will be asked while running
@@ -33,9 +33,9 @@ bls_private_key_store_path: tests/keys/test.bls.key.json
 aggregator_server_ip_port_address: localhost:8090
 
 # avs node spec compliance https://eigen.nethermind.io/docs/spec/intro
-eigen_metrics_ip_port_address: localhost:9090
+eigen_metrics_ip_port_address: http://host.docker.internal:9090
 enable_metrics: true
-node_api_ip_port_address: localhost:9010
+node_api_ip_port_address: http://host.docker.internal:9010
 enable_node_api: true
 
 register_operator_on_startup: true
