--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,28 +13,29 @@ concurrency:
 
 
 jobs:
-  run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+  # TODO: fix package when running geth+lh
+  # run:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@v4
 
-      - name: Setup Kurtosis
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          if [ '1.3.0' = "latest" ]; then
-            sudo apt install kurtosis-cli
-          else
-            sudo apt install kurtosis-cli='1.3.0'
-          fi
-          kurtosis analytics disable
-          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-        shell: bash
+  #     - name: Setup Kurtosis
+  #       run: |
+  #         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+  #         sudo apt update
+  #         if [ '1.3.0' = "latest" ]; then
+  #           sudo apt install kurtosis-cli
+  #         else
+  #           sudo apt install kurtosis-cli='1.3.0'
+  #         fi
+  #         kurtosis analytics disable
+  #         echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
+  #       shell: bash
 
-      - name: Run Package with default args
-        run: |
-          kurtosis run ./kurtosis_package
+  #     - name: Run Package with default args
+  #       run: |
+  #         kurtosis run ./kurtosis_package
 
   run_with_args:
     runs-on: ubuntu-latest
