--- a/kurtosis_package/kurtosis.yml
+++ b/kurtosis_package/kurtosis.yml
@@ -1,1 +1,4 @@
 name: "github.com/Layr-Labs/avs-devnet"
+replace:
+  # Fix to a specific version of kurtosis ethereum package to avoid breaking changes
+  github.com/ethpandaops/ethereum-package: github.com/ethpandaops/ethereum-package@4.3.0
