fix: use public image

--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -19,7 +19,7 @@ artifacts:
 
 services:
   - name: "ics-aggregator"
-    image: "ics-aggregator"
+    image: "incredible-squaring/aggregator/cmd/main.go"
     ports:
       rpc:
         number: 8090
