feat: generalize aggregator deployment (#10)
This PR generalizes service deployment so the aggregator service can be
specified through config files.

--- a/kurtosis_package/kurtosis.yml
+++ b/kurtosis_package/kurtosis.yml
@@ -1,1 +1,6 @@
 name: "github.com/Layr-Labs/avs-devnet"
+description: |
+  Runs an Ethereum devnet with EigenLayer and AVS contracts plus off-chain services
+replace:
+  # Fix to a specific version of kurtosis ethereum package to avoid breaking changes
+  github.com/ethpandaops/ethereum-package: github.com/ethpandaops/ethereum-package@4.3.0
