--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -2,9 +2,11 @@ eigenlayer_repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
 eigenlayer_ref: "master"
 eigenlayer_path: "contracts/lib/eigenlayer-middleware/lib/eigenlayer-contracts"
 
-avs_repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
-avs_ref: "master"
-avs_path: "contracts"
+deployments:
+  - name: incredible-squaring
+    repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
+    ref: "master"
+    contracts_path: "contracts"
 
 keystores:
   - name: "operator1_bls_keystore"
