--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -3,6 +3,17 @@ eigenlayer_ref: "master"
 eigenlayer_path: "contracts/lib/eigenlayer-middleware/lib/eigenlayer-contracts"
 
 deployments:
+  # - name: EigenLayer
+  #   repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
+  #   ref: "master"
+  #   contracts_path: "contracts/lib/eigenlayer-middleware/lib/eigenlayer-contracts"
+  #   script: script/deploy/devnet/M2_Deploy_From_Scratch.s.sol:Deployer_M2
+  #   extra_args: --sig 'run(string memory configFile)' -- deploy_from_scratch.config.json
+  #   # NOTE: input/output key-value order is destination-source
+  #   input:
+  #     script/output/{chain_id}: eigenlayer_addresses
+  #   output:
+  #     avs_addresses: "script/output/{chain_id}/credible_squaring_avs_deployment_output.json"
   - name: incredible-squaring
     repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
     ref: "master"
