--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,13 @@ jobs:
   #       run: |
   #         kurtosis run ./kurtosis_package
 
-  run_with_args:
+  run_examples:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        args_file:
-          - './kurtosis_package/devnet_params.yaml'
-          - './examples/hello_world.yaml'
+        example:
+          - devnet
+          - hello_world
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -56,9 +56,8 @@ jobs:
           echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
         shell: bash
 
-      - name: Run Package with args file '${{ matrix.args_file }}'
-        run: |
-          kurtosis run ./kurtosis_package --args-file ${{ matrix.args_file }}
+      - name: Run example '${{ matrix.example }}'
+        run: make start_${{ matrix.example }}
 
   lint:
     runs-on: ubuntu-latest
