chore: rename ethereum_params -> ethereum_package

--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -148,7 +148,7 @@ artifacts:
         register_operator_on_startup: True
         token_strategy_addr: {{.TokenStrategyAddress}}
 
-ethereum_params:
+ethereum_package:
   participants:
     - el_type: reth
       cl_type: teku
