chore: deploy EigenLayer in default devnet

--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -1,9 +1,64 @@
 deployments:
-  - name: Uniswap v4
-    repo: "https://github.com/Uniswap/v4-periphery.git"
-    ref: "0c162a0cec2bf9184ce97e19f710fbc657ae7a5a"
-    contracts_path: "."
-    script: script/01_PoolManager.s.sol:DeployPoolManager
+  - name: "EigenLayer"
+    repo: "https://github.com/Layr-Labs/eigenlayer-contracts.git"
+    ref: "v0.4.3-mainnet-rewards-foundation-incentives"
+    script: script/deploy/local/Deploy_From_Scratch.s.sol.s.sol:DeployFromScratch
+    extra_args: --sig 'run(string memory configFile)' -- deploy_from_scratch.config.json
+    input:
+      script/configs/local/: eigenlayer_deployment_input
+    output:
+      eigenlayer_addresses:
+        path: "script/output/local/M2_from_scratch_deployment_data.json"
+        rename: "eigenlayer_deployment_output.json"
+
+artifacts:
+  eigenlayer_deployment_input:
+    files:
+      deploy_from_scratch.config.json: |
+        {
+          "maintainer": "example@example.org",
+          "multisig_addresses": {
+            "operationsMultisig": "{{.DeployerAddress}}",
+            "pauserMultisig": "{{.DeployerAddress}}",
+            "executorMultisig": "{{.DeployerAddress}}"
+          },
+          "strategies": [],
+          "strategyManager": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "eigenPod": {
+            "PARTIAL_WITHDRAWAL_FRAUD_PROOF_PERIOD_BLOCKS": 1,
+            "MAX_RESTAKED_BALANCE_GWEI_PER_VALIDATOR": "32000000000"
+          },
+          "eigenPodManager": {
+            "init_paused_status": 30
+          },
+          "delayedWithdrawalRouter": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "slasher": {
+            "init_paused_status": 0
+          },
+          "delegation": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "rewardsCoordinator": {
+            "init_paused_status": 0,
+            "CALCULATION_INTERVAL_SECONDS": 604800,
+            "MAX_REWARDS_DURATION": 6048000,
+            "MAX_RETROACTIVE_LENGTH": 7776000,
+            "MAX_FUTURE_LENGTH": 2592000,
+            "GENESIS_REWARDS_TIMESTAMP": 1710979200,
+            "rewards_updater_address": "{{.DeployerAddress}}",
+            "activation_delay": 7200,
+            "calculation_interval_seconds": 604800,
+            "global_operator_commission_bips": 1000
+          },
+          "ethPOSDepositAddress": "0x00000000219ab540356cBB839Cbe05303d7705Fa"
+        }
 
 ethereum_package:
   participants:
