ci: run default devnet example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,6 +41,7 @@ jobs:
     strategy:
       matrix:
         example:
+          - devnet
           - incredible_squaring
           - hello_world
     steps:
