--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -1,9 +1,69 @@
 deployments:
-  - name: Uniswap v4
-    repo: "https://github.com/Uniswap/v4-periphery.git"
-    ref: "0c162a0cec2bf9184ce97e19f710fbc657ae7a5a"
-    contracts_path: "."
-    script: script/01_PoolManager.s.sol:DeployPoolManager
+  - name: "EigenLayer"
+    repo: "https://github.com/Layr-Labs/eigenlayer-contracts.git"
+    ref: "v0.4.2-mainnet-pepe"
+    script: script/deploy/devnet/M2_Deploy_From_Scratch.s.sol:Deployer_M2
+    extra_args: "--sig 'run(string memory configFileName)' -- deploy_from_scratch.config.json"
+    # Uses the `eigenlayer_deployment_input` artifact as input, stored in `script/configs/devnet/`
+    input:
+      script/configs/devnet/: eigenlayer_deployment_input
+    # Produces a single file `script/output/devnet/M2_from_scratch_deployment_data.json`
+    # renamed to `eigenlayer_deployment_output.json` and stored as the `eigenlayer_addresses` artifact
+    output:
+      eigenlayer_addresses:
+        path: script/output/devnet/M2_from_scratch_deployment_data.json
+        rename: eigenlayer_deployment_output.json
+
+artifacts:
+  # Initially produces a single file `deploy_from_scratch.config.json`
+  # and stores it as the artifact `eigenlayer_deployment_input`
+  eigenlayer_deployment_input:
+    files:
+      deploy_from_scratch.config.json: |
+        {
+          "maintainer": "example@example.org",
+          "multisig_addresses": {
+            "operationsMultisig": "{{.DeployerAddress}}",
+            "pauserMultisig": "{{.DeployerAddress}}",
+            "executorMultisig": "{{.DeployerAddress}}"
+          },
+          "strategies": [],
+          "strategyManager": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "eigenPod": {
+            "PARTIAL_WITHDRAWAL_FRAUD_PROOF_PERIOD_BLOCKS": 1,
+            "MAX_RESTAKED_BALANCE_GWEI_PER_VALIDATOR": "32000000000"
+          },
+          "eigenPodManager": {
+            "init_paused_status": 30
+          },
+          "delayedWithdrawalRouter": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "slasher": {
+            "init_paused_status": 0
+          },
+          "delegation": {
+            "init_paused_status": 0,
+            "init_withdrawal_delay_blocks": 1
+          },
+          "rewardsCoordinator": {
+            "init_paused_status": 0,
+            "CALCULATION_INTERVAL_SECONDS": 604800,
+            "MAX_REWARDS_DURATION": 6048000,
+            "MAX_RETROACTIVE_LENGTH": 7776000,
+            "MAX_FUTURE_LENGTH": 2592000,
+            "GENESIS_REWARDS_TIMESTAMP": 1710979200,
+            "rewards_updater_address": "{{.DeployerAddress}}",
+            "activation_delay": 7200,
+            "calculation_interval_seconds": 604800,
+            "global_operator_commission_bips": 1000
+          },
+          "ethPOSDepositAddress": "0x00000000219ab540356cBB839Cbe05303d7705Fa"
+        }
 
 ethereum_package:
   participants:
