docs: add title to incredible-squaring example

--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -1,3 +1,4 @@
+# Example devnet config file for the incredible-squaring-avs example
 deployments:
   - name: EigenLayer
     repo: "https://github.com/Layr-Labs/incredible-squaring-avs.git"
