feat: add example with Aligned contracts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
           - kurtosis_start
           - kurtosis_incredible_squaring
           - kurtosis_hello_world
+          - kurtosis_aligned_layer
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
