--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -53,8 +53,8 @@ services:
         - operator1_bls_keystore
         - operator1_ecdsa_keystore
     env:
-      OPERATOR_ECDSA_KEY_PASSWORD: $operator1_ecdsa_keystore.password
-      OPERATOR_BLS_KEY_PASSWORD: $operator1_bls_keystore.password
+      OPERATOR_ECDSA_KEY_PASSWORD: $keystores.operator1_ecdsa_keystore.password
+      OPERATOR_BLS_KEY_PASSWORD: $keystores.operator1_bls_keystore.password
     cmd: ["--config", "/usr/src/app/config-files/operator-config.yaml"]
 
 keystores:
@@ -68,11 +68,11 @@ artifacts:
     files:
       deploy_from_scratch.config.json: |
         {
-          "maintainer": "samlaf@eigenlabs.org",
+          "maintainer": "example@example.org",
           "multisig_addresses": {
-            "operationsMultisig": "{{.DeployerAddress}}",
-            "pauserMultisig": "{{.DeployerAddress}}",
-            "executorMultisig": "{{.DeployerAddress}}"
+            "operationsMultisig": "{{.deployer_address}}",
+            "pauserMultisig": "{{.deployer_address}}",
+            "executorMultisig": "{{.deployer_address}}"
           },
           "strategies": [],
           "strategyManager": {
@@ -104,7 +104,7 @@ artifacts:
             "MAX_RETROACTIVE_LENGTH": 7776000,
             "MAX_FUTURE_LENGTH": 2592000,
             "GENESIS_REWARDS_TIMESTAMP": 1710979200,
-            "rewards_updater_address": "{{.DeployerAddress}}",
+            "rewards_updater_address": "{{.deployer_address}}",
             "activation_delay": 7200,
             "calculation_interval_seconds": 604800,
             "global_operator_commission_bips": 1000
@@ -117,8 +117,8 @@ artifacts:
       aggregator-config.yaml: |
         # 'production' only prints info and above. 'development' also prints debug
         environment: production
-        eth_rpc_url: {{.HttpRpcUrl}}
-        eth_ws_url: {{.WsUrl}}
+        eth_rpc_url: {{.http_rpc_url}}
+        eth_ws_url: {{.ws_rpc_url}}
         # address which the aggregator listens on for operator signed messages
         aggregator_server_ip_port_address: 0.0.0.0:8090
 
@@ -128,26 +128,26 @@ artifacts:
       operator1_ecdsa_keystore:
         OperatorAddress: ".address"
       avs_addresses:
-        AvsRegistryCoordinatorAddress: ".addresses.registryCoordinator"
-        OperatorStateRetrieverAddress: ".addresses.operatorStateRetriever"
-        TokenStrategyAddress: ".addresses.erc20MockStrategy"
+        avs_registry_coordinator_address: ".addresses.registryCoordinator"
+        operator_state_retriever_address: ".addresses.operatorStateRetriever"
+        token_strategy_addr: ".addresses.erc20MockStrategy"
     files:
       operator-config.yaml: |
         production: False
         operator_address: {{.OperatorAddress}}
-        avs_registry_coordinator_address: {{.AvsRegistryCoordinatorAddress}}
-        operator_state_retriever_address: {{.OperatorStateRetrieverAddress}}
-        eth_rpc_url: {{.HttpRpcUrl}}
-        eth_ws_url: {{.WsUrl}}
+        avs_registry_coordinator_address: {{.avs_registry_coordinator_address}}
+        operator_state_retriever_address: {{.operator_state_retriever_address}}
+        eth_rpc_url: {{.http_rpc_url}}
+        eth_ws_url: {{.http_ws_url}}
         ecdsa_private_key_store_path: /usr/src/app/config-files/1.ecdsa.key.json
         bls_private_key_store_path: /usr/src/app/config-files/1.bls.key.json
-        aggregator_server_ip_port_address: {{.Service_aggregator}}:8090
+        aggregator_server_ip_port_address: {{.services.aggregator.ip_address}}:8090
         eigen_metrics_ip_port_address: "10"
         enable_metrics: False
         node_api_ip_port_address: "12"
         enable_node_api: False
         register_operator_on_startup: True
-        token_strategy_addr: {{.TokenStrategyAddress}}
+        token_strategy_addr: {{.token_strategy_addr}}
 
 ethereum_package:
   participants:
