feat: use expected syntax in hello_world example

--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -42,7 +42,7 @@ services:
     env:
       # This expands to the RPC node's URL
       RPC_URL: "$http_rpc_url"
-      PRIVATE_KEY: "$deployer_private_key"
+      PRIVATE_KEY: "$keystores.operator_ecdsa_keystore.private_key"
     cmd: ["npm", "run", "start:operator"]
 
   - name: "traffic-generator"
@@ -54,8 +54,14 @@ services:
     env:
       # This expands to the RPC node's URL
       RPC_URL: "$http_rpc_url"
-      PRIVATE_KEY: "$deployer_private_key"
-    cmd: ["npm", "run", "start:traffic"]
+      PRIVATE_KEY: "$keystores.traffic_generator_ecdsa_keystore.private_key"
+    cmd: ["sh", "-c", "sleep 30 ; npm run start:traffic"]
+
+keystores:
+  - name: operator_ecdsa_keystore
+    type: ecdsa
+  - name: traffic_generator_ecdsa_keystore
+    type: ecdsa
 
 ethereum_package:
   participants:
